FIX: White space in smartphone in about section

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -76,6 +76,7 @@
       .home-headings {
         text-align:center;
         font-size: 80px;
+        margin-bottom: 7vh;
       }
     .home-descriptions {
       font-size: 35px;
